--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -16,7 +16,7 @@
     </div>
     <div class="item-price-box">
       <span class="item-price">
-        ¥ <%= @item.item_price%>
+        ¥ <%= @item.item_price %>
       </span>
       <span class="item-postage">
         <%= @item.item_shipping_fee_status.name %>
@@ -30,7 +30,7 @@
 
     <%# 商品が売れていない場合はこちらを表示しましょう %>
     <% elsif user_signed_in? && current_user.id != @item.user_id %>
-      <%= link_to "購入画面に進む", "#" ,class:"item-red-btn"%>
+      <%= link_to "購入画面に進む", item_orders_path(@item.id),class:"item-red-btn"%>
     <%# //商品が売れていない場合はこちらを表示しましょう %>
     <% end %>
 
