--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -143,6 +143,7 @@
                 <div class='sold-out'>
                   <span>Sold Out!!</span>
                 </div>
+                <% break %>
 
               <% end %>
             <% end %>
